added pages, react router and tv shows search

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,3 +1,10 @@
-.sample {
-  background-color: #745c97 !important;
+.layout-header {
+  h1 > a {
+    color: #fff;
+  }
+}
+
+.layout-footer {
+  text-align: center;
+  color: #fff;
 }
